crates/toml/tests/snapshots/invalid/local-date/trailing-t.stderr
TOML parse error at line 2, column 5
  |
2 | d = 2006-01-30T
  |     ^^^^^^^^^^^
invalid time, expected hour
